stream settings: Fix modal height issues on mobile browsers.
This commit fixes the overflowing of the stream settings modal on
mobile browsers caused due to the difference in handling of
viewport heights by WebKit (and Blink) and Geko engines. Uses JS
to calculate visible viewport height reliably.
Fixes issue #11324

--- a/static/styles/subscriptions.scss
+++ b/static/styles/subscriptions.scss
@@ -389,8 +389,16 @@ form#add_new_subscription {
     opacity: 1;
 }
 
+.overlay-content {
+    height: 100vh; // fallback
+    height: calc(var(--vh) * 100) !important;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .subscriptions-container {
-    position: relative;
     height: 95%;
     border-radius: 4px;
     padding: 0px;
